# maialib

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_API_CHEATSHEET.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Doxyfile  MANIFEST.in  Makefile  README.md  TODO.txt  llms-full.txt  llms.txt  pyproject.toml  setup.py
.github/workflows/: build.yml  connect.yml  wheels.yml
code-coverage/: index-sort-f.html  index-sort-l.html  index.html
core/: CMakeLists.txt
core/include/: barline.h  chord.h  clef.h  constants.h  helper.h  interval.h  log.h  measure.h  note.h  part.h  score.h  score_collection.h  utils.h
core/src/: barline.cpp  chord.cpp  clef.cpp  helper.cpp  interval.cpp  measure.cpp  note.cpp  part.cpp  score.cpp  score_collection.cpp
core/src/python_wrapper/: py_barline.cpp  py_chord.cpp  py_clef.cpp  py_constants.cpp  py_helper.cpp  py_interval.cpp  py_maiacore.cpp  py_maialib.cpp  py_measure.cpp  py_note.cpp  py_part.cpp  py_score.cpp  py_score_collection.cpp
docs/: CNAME  _c_1_2_users_2nyck_2_desktop_2maialib_2maiacore_2include_2maiacore_2chord_8h-example.html  _c_1_2_users_2nyck_2_desktop_2maialib_2maiacore_2include_2maiacore_2config_8h-example.html  annotated.html  annotated_dup.js  barline_8h_source.html  chord_8h_source.html  class_barline-members.html  class_barline.html  class_chord-members.html  class_chord.html  class_chord.js  class_clef-members.html  class_clef.html  class_clef.js  class_duration-members.html  class_duration.html  class_helper-members.html  class_helper.html  class_interval-members.html  class_interval.html  class_interval.js  class_key-members.html  class_key.html  class_key.js  class_measure-members.html  class_measure.html  class_measure.js  class_note-members.html  class_note.html  class_note.js  class_part-members.html  class_part.html  class_score-members.html  class_score.html  class_score_collection-members.html  class_score_collection.html  class_time_signature-members.html  class_time_signature.html  classes.html  (+82 more)
docs/docs/: annotated.html  annotated_dup.js  barline_8h_source.html  chord_8h_source.html  class_barline-members.html  class_barline.html  class_barline.js  class_chord-members.html  class_chord.html  class_chord.js  class_clef-members.html  class_clef.html  class_duration-members.html  class_duration.html  class_duration.js  class_fraction-members.html  class_fraction.html  class_fraction.js  class_helper-members.html  class_helper.html  class_interval-members.html  class_interval.html  class_interval.js  class_key-members.html  class_key.html  class_measure-members.html  class_measure.html  class_measure.js  class_note-members.html  class_note.html  class_note.js  class_part-members.html  class_part.html  class_part.js  class_score-members.html  class_score.html  class_score.js  class_score_collection-members.html  class_score_collection.html  class_score_collection.js  (+81 more)
docs/doxygen-awesome-css-2.1.0/: Doxyfile  doxygen-awesome-paragraph-link.js
docs/html/: annotated.html  annotated_dup.js  barline_8cpp.html  barline_8h_source.html  chord_8cpp.html  chord_8h_source.html  class_barline-members.html  class_barline.html  class_barline.js  class_chord-members.html  class_chord.html  class_chord.js  class_clef-members.html  class_clef.html  class_clef.js  class_helper-members.html  class_helper.html  class_interval-members.html  class_interval.html  class_interval.js  class_measure-members.html  class_measure.html  class_measure.js  class_note-members.html  class_note.html  class_note.js  class_part-members.html  class_part.html  class_score-members.html  class_score.html  class_score.js  class_score_collection-members.html  class_score_collection.html  classes.html  clef_8cpp.html  clef_8h_source.html  constants_8h_source.html  dir_18feaa2e564789a7b0862bb32aaf59df.html  dir_18feaa2e564789a7b0862bb32aaf59df.js  dir_18feaa2e564789a7b0862bb32aaf59df_dep.map  (+93 more)
docs/search/: all_10.js  all_11.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_10.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  searchdata.js
include/: constants.h  helper.h  note.h  part.h  score.h
maiacore/: .clang-format  CMakeLists.txt  CPPLINT.cfg
maialib/: __init__.py  setup.py
maialib/maiacore/: __init__.py
maialib/maiapy/: __init__.py  other.py  plots.py  (+2 more)
maiapy/: __init__.py  plots.py
python-tutorial/: README.md  barline.ipynb  count_notes.ipynb  create_notes_chords.ipynb  create_score.ipynb  dataframe.ipynb  example_plot.ipynb  find_pattern.ipynb  generate_random_notes.ipynb  get_chords.ipynb  helpers.ipynb  instrument_fragmentation.ipynb  interval-class.ipynb  myFuncs.ipynb  nyck_temp.ipynb  select_notes.ipynb  xpath.ipynb
scripts/: build-cheatsheet.py  build-llms-full.py  make-app.py  make-clean.py  make-cmake.py  make-cpp-tests.py  make-dist.py  make-install.py  make-library.py  make-module.py  make-py-tests.py  make-run-cpp-tests.py  make-uninstall.py  make-validate.py  run-code-coverage.py  terminal_colors.py
src/: barline.cpp  helper.cpp  measure.cpp  note.cpp  score.cpp
test/: test_chord.py  test_helpers.py  test_interval_comprehensive.py  test_measure_comprehensive.py  test_note.py  test_part_comprehensive.py  test_score.py  test_score_comprehensive.py
tests/: test_chord.py  test_helpers.py  test_note.py  test_score.py
tests-cpp/: CMakeLists.txt
tests-cpp/src/: adolfo-test.cpp  barline-test.cpp  chord-test.cpp  clef-test.cpp  config-test.cpp  duration-test.cpp  fraction-test.cpp  helpers-test.cpp  interval-test.cpp  key-test.cpp  measure-test.cpp  note-test.cpp  nyck-test.cpp  part-test.cpp  score-collection-test.cpp  score-test.cpp  time-signature-test.cpp  utils-test.cpp
theme/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js
(+415 files in other folders)
